// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tax calculateDeduction should calculate minimum deduction on a income of -1000 which is below min threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -97450,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 0 which is below min threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -96450,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 1000 which is below min threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -95450,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 3999 which is below min threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -92451,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 4000 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -92450,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 5000 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -91450,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 9000 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -87450,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 40000 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -56450,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 80000 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -21450,
  "minimumDeduction": 36800,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 97610 which is between min and max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -11940,
  "minimumDeduction": 44900,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 100000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": -10650,
  "minimumDeduction": 46000,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 169000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 26610,
  "minimumDeduction": 77740,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 170000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 27150,
  "minimumDeduction": 78200,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 237900 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 63816,
  "minimumDeduction": 109434,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 240000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 65400,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 598050 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 423450,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 600000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 425400,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 962050 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 787450,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 999999 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 825399,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 2000000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 1825400,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateDeduction should calculate minimum deduction on a income of 3000000 which is above max threshold for minimum deduction 1`] = `
Object {
  "commonIncome": 2825400,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
}
`;

exports[`tax calculateIncomeTax should calculate income tax on a income of -1000 1`] = `-220`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 0 1`] = `0`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 1000 1`] = `220`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 3999 1`] = `879`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 4000 1`] = `880`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 5000 1`] = `1100`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 9000 1`] = `1980`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 40000 1`] = `8800`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 80000 1`] = `17600`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 97610 1`] = `21474`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 100000 1`] = `22000`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 169000 1`] = `37180`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 170000 1`] = `37400`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 237900 1`] = `52338`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 240000 1`] = `52800`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 598050 1`] = `131571`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 600000 1`] = `132000`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 962050 1`] = `211651`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 999999 1`] = `219999`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 2000000 1`] = `440000`;

exports[`tax calculateIncomeTax should calculate income tax on a income of 3000000 1`] = `660000`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of -1000 1`] = `-80`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 0 1`] = `0`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 1000 1`] = `80`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 3999 1`] = `319`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 4000 1`] = `320`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 5000 1`] = `400`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 9000 1`] = `720`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 40000 1`] = `3200`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 80000 1`] = `6400`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 97610 1`] = `7808`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 100000 1`] = `8000`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 169000 1`] = `13520`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 170000 1`] = `13600`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 237900 1`] = `19032`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 240000 1`] = `19200`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 598050 1`] = `47844`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 600000 1`] = `48000`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 962050 1`] = `76964`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 999999 1`] = `79999`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 2000000 1`] = `160000`;

exports[`tax calculateSocialSecurityDeduction should calculate social security deduction on a income of 3000000 1`] = `240000`;

exports[`tax calculateStep1 should calculate step one tax on a income of -1000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 0 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 1000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 3999 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 4000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 5000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 9000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 40000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 80000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 97610 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 100000 which is below step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 169000 which is above step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 170000 which is above step one tax 1`] = `0`;

exports[`tax calculateStep1 should calculate step one tax on a income of 237900 which is above step one tax 1`] = `808`;

exports[`tax calculateStep1 should calculate step one tax on a income of 240000 which is above step one tax 1`] = `844`;

exports[`tax calculateStep1 should calculate step one tax on a income of 598050 which is above step one tax 1`] = `1318`;

exports[`tax calculateStep1 should calculate step one tax on a income of 600000 which is above step one tax 1`] = `1318`;

exports[`tax calculateStep1 should calculate step one tax on a income of 962050 which is above step one tax 1`] = `1318`;

exports[`tax calculateStep1 should calculate step one tax on a income of 999999 which is above step one tax 1`] = `1318`;

exports[`tax calculateStep1 should calculate step one tax on a income of 2000000 which is above step one tax 1`] = `1318`;

exports[`tax calculateStep1 should calculate step one tax on a income of 3000000 which is above step one tax 1`] = `1318`;

exports[`tax calculateStep2 should calculate step two tax on a income of -1000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 0 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 1000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 3999 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 4000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 5000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 9000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 40000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 80000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 97610 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 100000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 169000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 170000 which is below step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 237900 which is above step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 240000 which is above step two tax 1`] = `0`;

exports[`tax calculateStep2 should calculate step two tax on a income of 598050 which is above step two tax 1`] = `13206`;

exports[`tax calculateStep2 should calculate step two tax on a income of 600000 which is above step two tax 1`] = `13284`;

exports[`tax calculateStep2 should calculate step two tax on a income of 962050 which is above step two tax 1`] = `15036`;

exports[`tax calculateStep2 should calculate step two tax on a income of 999999 which is above step two tax 1`] = `15036`;

exports[`tax calculateStep2 should calculate step two tax on a income of 2000000 which is above step two tax 1`] = `15036`;

exports[`tax calculateStep2 should calculate step two tax on a income of 3000000 which is above step two tax 1`] = `15036`;

exports[`tax calculateStep3 should calculate step three tax on a income of -1000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 0 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 1000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 3999 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 4000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 5000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 9000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 40000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 80000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 97610 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 100000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 169000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 170000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 237900 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 240000 which is below step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 598050 which is above step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 600000 which is above step three tax 1`] = `0`;

exports[`tax calculateStep3 should calculate step three tax on a income of 962050 which is above step three tax 1`] = `42645`;

exports[`tax calculateStep3 should calculate step three tax on a income of 999999 which is above step three tax 1`] = `43603`;

exports[`tax calculateStep3 should calculate step three tax on a income of 2000000 which is above step three tax 1`] = `43603`;

exports[`tax calculateStep3 should calculate step three tax on a income of 3000000 which is above step three tax 1`] = `43603`;

exports[`tax calculateStep4 should calculate step four tax on a income of -1000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 0 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 1000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 3999 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 4000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 5000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 9000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 40000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 80000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 97610 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 100000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 169000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 170000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 237900 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 240000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 598050 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 600000 which is below step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 962050 which is above step four tax 1`] = `0`;

exports[`tax calculateStep4 should calculate step four tax on a income of 999999 which is above step four tax 1`] = `5051`;

exports[`tax calculateStep4 should calculate step four tax on a income of 2000000 which is above step four tax 1`] = `169051`;

exports[`tax calculateStep4 should calculate step four tax on a income of 3000000 which is above step four tax 1`] = `169051`;

exports[`tax calculateStep5 should calculate step five tax on a income of -1000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 0 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 1000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 3999 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 4000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 5000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 9000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 40000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 80000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 97610 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 100000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 169000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 170000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 237900 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 240000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 598050 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 600000 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 962050 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 999999 which is below step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 2000000 which is above step five tax 1`] = `0`;

exports[`tax calculateStep5 should calculate step five tax on a income of 3000000 which is above step five tax 1`] = `174000`;

exports[`tax getDividendsTaxCalculations should match snapshot 1`] = `
Object {
  "afterDividendsTax": 50544,
  "dividends": 78000,
  "dividendsTax": 27456,
  "surplus": 100000,
  "surplusTax": 22000,
  "upwardsAdjustment": 124800,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of -1000 which is below min threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 20519,
  "commonIncome": -97450,
  "income": -1000,
  "incomeTax": -21439,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
  "socialSecurityDeduction": -80,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": -21519,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 0 which is below min threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 21219,
  "commonIncome": -96450,
  "income": 0,
  "incomeTax": -21219,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 0,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": -21219,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 1000 which is below min threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 21919,
  "commonIncome": -95450,
  "income": 1000,
  "incomeTax": -20999,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 80,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": -20919,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 3999 which is below min threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 24020,
  "commonIncome": -92451,
  "income": 3999,
  "incomeTax": -20340,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 319,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": -20021,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 4000 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 24019,
  "commonIncome": -92450,
  "income": 4000,
  "incomeTax": -20339,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 320,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": -20019,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 5000 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 24719,
  "commonIncome": -91450,
  "income": 5000,
  "incomeTax": -20119,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 400,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": -19719,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 9000 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 27519,
  "commonIncome": -87450,
  "income": 9000,
  "incomeTax": -19239,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 720,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": -18519,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 40000 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 49219,
  "commonIncome": -56450,
  "income": 40000,
  "incomeTax": -12419,
  "minimumDeduction": 31800,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 3200,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": -9219,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 80000 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 78319,
  "commonIncome": -21450,
  "income": 80000,
  "incomeTax": -4719,
  "minimumDeduction": 36800,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 6400,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": 1681,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 97610 which is between min and max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 92429,
  "commonIncome": -11940,
  "income": 97610,
  "incomeTax": -2627,
  "minimumDeduction": 44900,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 7808,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": 5181,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 100000 which is above max threshold for minimum deduction, below step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 94343,
  "commonIncome": -10650,
  "income": 100000,
  "incomeTax": -2343,
  "minimumDeduction": 46000,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 8000,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": 5657,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 169000 which is above max threshold for minimum deduction, above step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 149626,
  "commonIncome": 26610,
  "income": 169000,
  "incomeTax": 5854,
  "minimumDeduction": 77740,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 13520,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": 19374,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 170000 which is above max threshold for minimum deduction, above step one tax, below step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 150427,
  "commonIncome": 27150,
  "income": 170000,
  "incomeTax": 5973,
  "minimumDeduction": 78200,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 13600,
  "step1": 0,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": 19573,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 237900 which is above max threshold for minimum deduction, above step one tax, above step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 204021,
  "commonIncome": 63816,
  "income": 237900,
  "incomeTax": 14039,
  "minimumDeduction": 109434,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 19032,
  "step1": 808,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": 33879,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 240000 which is above max threshold for minimum deduction, above step one tax, above step two tax, below step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 205568,
  "commonIncome": 65400,
  "income": 240000,
  "incomeTax": 14388,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 19200,
  "step1": 844,
  "step2": 0,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": 34432,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 598050 which is above max threshold for minimum deduction, above step one tax, above step two tax, above step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 442523,
  "commonIncome": 423450,
  "income": 598050,
  "incomeTax": 93159,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 47844,
  "step1": 1318,
  "step2": 13206,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": 155527,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 600000 which is above max threshold for minimum deduction, above step one tax, above step two tax, above step three tax, below step four tax, below step five tax 1`] = `
Object {
  "afterTax": 443810,
  "commonIncome": 425400,
  "income": 600000,
  "incomeTax": 93588,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 48000,
  "step1": 1318,
  "step2": 13284,
  "step3": 0,
  "step4": 0,
  "step5": 0,
  "totalTax": 156190,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 962050 which is above max threshold for minimum deduction, above step one tax, above step two tax, above step three tax, above step four tax, below step five tax 1`] = `
Object {
  "afterTax": 652848,
  "commonIncome": 787450,
  "income": 962050,
  "incomeTax": 173239,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 76964,
  "step1": 1318,
  "step2": 15036,
  "step3": 42645,
  "step4": 0,
  "step5": 0,
  "totalTax": 309202,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 999999 which is above max threshold for minimum deduction, above step one tax, above step two tax, above step three tax, above step four tax, below step five tax 1`] = `
Object {
  "afterTax": 673405,
  "commonIncome": 825399,
  "income": 999999,
  "incomeTax": 181587,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 79999,
  "step1": 1318,
  "step2": 15036,
  "step3": 43603,
  "step4": 5051,
  "step5": 0,
  "totalTax": 326594,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 2000000 which is above max threshold for minimum deduction, above step one tax, above step two tax, above step three tax, above step four tax, above step five tax 1`] = `
Object {
  "afterTax": 1209404,
  "commonIncome": 1825400,
  "income": 2000000,
  "incomeTax": 401588,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 160000,
  "step1": 1318,
  "step2": 15036,
  "step3": 43603,
  "step4": 169051,
  "step5": 0,
  "totalTax": 790596,
}
`;

exports[`tax getTaxCalculations should calculate tax on a income of 3000000 which is above max threshold for minimum deduction, above step one tax, above step two tax, above step three tax, above step four tax, above step five tax 1`] = `
Object {
  "afterTax": 1735404,
  "commonIncome": 2825400,
  "income": 3000000,
  "incomeTax": 621588,
  "minimumDeduction": 109950,
  "personalAllowance": 64650,
  "socialSecurityDeduction": 240000,
  "step1": 1318,
  "step2": 15036,
  "step3": 43603,
  "step4": 169051,
  "step5": 174000,
  "totalTax": 1264596,
}
`;
